- Added react-sizeme library to board component to be able to know its width and height. - Added text-area to sticky note component - Added logic for sending the clicked sticky note to the top when its focused and sending it back to its original position when its blurred - Added validation logic to prevent the sticky notes from being created outside the boundaries of the board

--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,12 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  animation: App-hello-img-movement 1 2s  linear;
+  animation: App-hello-img-movement 1 0.3s  linear;
 }
 
 .App-header {
   background-color: black;
-  animation: App-header-color-change 1 4s linear;
+  animation: App-header-color-change 1 0.6s linear;
   height: 150px;
   padding: 20px;
   color: white;
