--- a/src/components/StickyNote/StickyNote.css
+++ b/src/components/StickyNote/StickyNote.css
@@ -2,4 +2,12 @@
     position: absolute;
     border: 1px solid black;
     background-color: yellow;
+    padding: 10px;
+}
+.note-container textarea {
+    resize: none;
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    border: none;
 }
